--- a/nodejs-demo-app/.github/workflows/main.yml
+++ b/nodejs-demo-app/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
       - "master"
   pull_request:
     branches: 
-      - "master" 
+      - "master"
 
 jobs:
   build-and-push:
@@ -24,8 +24,26 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -f Docker/Dockerfile -t helion444/nodejs-demo-app:alpine3.22 -t helion444/nodejs-demo-app:${{ github.sha }} .
+          docker build -f Docker/Dockerfile \
+            -t helion444/nodejs-demo-app:alpine3.22 \
+            -t helion444/nodejs-demo-app:${{ github.sha }} .
 
+      - name: Verify Docker image
+        run: docker images helion444/nodejs-demo-app:alpine3.22
+
+      - name: Test Docker image
+        run: |
+          if npm run | grep -q "test"; then
+            docker run --rm helion444/nodejs-demo-app:alpine3.22 npm test
+          else
+            echo "No test script found, skipping test."
+          fi
+
+      - name: Scan Docker image for vulnerabilities
+        uses: aquasecurity/trivy-action@v0.29.0
+        with:
+          image-ref: helion444/nodejs-demo-app:alpine3.22
+          
       - name: Push Docker image
         run: |
           docker push helion444/nodejs-demo-app:alpine3.22
