--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,15 +39,15 @@ jobs:
             echo "No test script found, skipping test."
           fi
 
-      - name: Scan Docker image for vulnerabilities
-        uses: aquasecurity/trivy-action@v0.29.0
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@0.28.0
         with:
           image-ref: helion444/nodejs-demo-app:alpine3.22
-          format: table
-          exit-code: 1
+          format: 'table'
+          exit-code: '1'
           ignore-unfixed: true
-          vuln-type: os,library
-          severity: CRITICAL,HIGH
+          vuln-type: 'os,library'
+          severity: 'CRITICAL,HIGH'
 
       - name: Push Docker image
         run: |
